@@ -1,5 +1,13 @@
 2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03651] Debian bug #176981
+	* file.c (checkRedirection): added
+		(loadGeneralFile): check redirection
+				t_buf only is created when it is NULL
+				remove_space
+
+2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03647] expandName() and expandPath()
 	* etc.c (openSecretFile): use expandPath
 		(expandName): rewrite
@@ -6578,4 +6586,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.687 2003/01/17 17:05:57 ukai Exp $
+$Id: ChangeLog,v 1.688 2003/01/17 17:13:02 ukai Exp $
